--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,17 @@
 @import 'normalize-scss/sass/normalize';
+@import './variables';
+
+html {
+  background: $background;
+  font-size: 62.5%;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 body {
-  background: green; // test
+  font-size: 1.6rem;
+}
+
+.container {
+  max-width: 100rem;
+  margin: 0 auto;
 }
